a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cecily_thomas/string_if_expression.min
var x : string;

x = "hi";

if x then
endif
